# ai_form

./: README.md  pyproject.toml  requirement.txt  requirements.txt
.devcontainer/: devcontainer.json
streamlit_version/: ai_interface.py  app.py  demo.py  form_definitions.py  project_management.py  projects.xlsx  speech_recognition.py  ui_components.py  utils.py
tkinter_version/: __init__.py  ai_model.py  forms.py  gui.py  main.py  speech_recognition.py
