[project]
name = "ai-form"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "audio-recorder-streamlit>=0.0.10",
    "azure-ai-inference>=1.0.0b9",
    "funasr>=1.2.6",
    "gradio>=5.26.0",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sounddevice>=0.5.1",
    "streamlit>=1.44.1",
    "streamlit-audiorec>=0.1.3",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
]


[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
